data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_672.wast
;; 3. **Test Description 3**:    - **Test**: Loop with a `br_if` condition based on a comparison between a local variable and a constant.    - **Constraint**: Verify that the loop exits correctly when the variable fails to meet the condition.    - **Reason**: Faulty condition checks might make the loop continue incorrectly.

(assert_invalid
  (module
    (func (local i32)
      (i32.const 0)
      (set_local 0)
      (loop (result i32)
        (local.get 0)
        (i32.const 5)
        (i32.lt_s)
        (br_if 1)
        (i32.const 6)
        (set_local 0)
        (br 0)
      )
    )
  )
  "type mismatch"
)